--- a/Aula 10/css/style.css
+++ b/Aula 10/css/style.css
@@ -16,12 +16,10 @@ header {
     width: 100%;
     height: 101px;
     display: flex;
-    align-items: center;
     position: sticky;
     top: 0px;
     z-index: 2;
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
-    font-family: 'Roboto';
     right: 12px;
 }
 
@@ -41,10 +39,20 @@ h4 {
     display: flex;
     align-items: center;
     font-size: 15px;
-    line-height: 18px;
+    line-height: 17px;
     font-family: 'Roboto';
+    font-weight: 400;
+    padding: 10px;
     
     
+    
+}
+h1{
+    padding: 24px;
+    padding-right: 12px;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 47px;
 }
 
 .Ambiente-Card {
@@ -89,6 +97,7 @@ h4 {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    font-weight: 400;
 }
 h2{
     text-align: center;
@@ -96,6 +105,7 @@ h2{
     font-size: 30px;
     line-height: 35px;
     width: 192.99px;
+    font-weight: 400px;
 }
 
 a{
