--- a/Aula 14/css/style.css
+++ b/Aula 14/css/style.css
@@ -7,9 +7,6 @@
     margin: 0;
 }
 
-body {
-    height: 1024px;
-}
 
 header {
     background-color: #00669F;
@@ -38,7 +35,7 @@ h4 {
     height: 38px;
     display: flex;
     align-items: center;
-    font-size: 15px;
+    font-size: 0.9rem;
     line-height: 17px;
     font-family: 'Roboto';
     font-weight: 400;
@@ -50,7 +47,7 @@ h4 {
 h1{
     padding: 24px;
     padding-right: 12px;
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: 400;
     line-height: 47px;
 }
@@ -61,8 +58,8 @@ h1{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 834px;
-    height: 597px;
-    flex-wrap: wrap;
+    height: 100%;
+    
 }
 
 .Card {
@@ -105,7 +102,7 @@ h1{
 h2{
     text-align: center;
     margin: 82px 0px 30px;
-    font-size: 20px;
+    font-size: 1.5rem;
     line-height: 35px;
     width: 192.99px;
     font-weight: 400px;
@@ -119,7 +116,7 @@ a{
     height: 55px;
     background-color: #00669F;
     margin-top: 24px;
-    font-size: 15px;
+    font-size: 0.9rem;
     line-height: 18px;
     color: #f3f3f3;
     text-decoration: none;
@@ -133,24 +130,31 @@ a:active{
 p{
     width: 90%;
     height: 128px;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 19px;
     text-align: justify;
     color: #333;
 }
 footer {
-    position: absolute;
-    margin-top: 585px;
+    
+    
     display: flex;
     width: 100%;
     height: 51px;
     align-items: center;
     padding-left: 28px;
     background-color: #00669F;
-    left: 0px;
-    top: 972px;
+    
 }
 
 footer h3 {
     color: white;
+}
+@media(min-width: 460px){
+    .Ambiente-Card{
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
