pequeno ajuste no footer h3

--- a/Aula 14/css/style.css
+++ b/Aula 14/css/style.css
@@ -150,11 +150,15 @@ footer {
 footer h3 {
     color: white;
 }
-@media(min-width: 460px){
+@media(max-width: 460px){
     .Ambiente-Card{
         display: flex;
         flex-wrap: nowrap;
         flex-direction: column;
         justify-content: center;
+    }
+    footer h3{
+        font-size: 0.75rem;
+
     }
 }
