--- a/Aula 14/css/style.css
+++ b/Aula 14/css/style.css
@@ -29,7 +29,7 @@ main {
 
 h4 {
    
-    background-color: #1CD1B0;
+    background-color:#D1891C;
     padding-left: 10px;
     width: 100%;
     height: 38px;
@@ -50,6 +50,7 @@ h1{
     font-size: 2.5rem;
     font-weight: 400;
     line-height: 47px;
+    color: #f3f3f3;
 }
 
 .Ambiente-Card {
@@ -150,6 +151,17 @@ footer {
 footer h3 {
     color: white;
 }
+
+footer a {
+    background-image: url(/img/Icon/github.svg);
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+    margin-left: 800px;
+    margin-top: 0px;
+    background-size: cover;
+}
+
 @media(max-width: 460px){
     .Ambiente-Card{
         display: flex;
@@ -161,4 +173,17 @@ footer h3 {
         font-size: 0.75rem;
 
     }
+    h1{
+        font-size: 2rem;
+    }
+    footer a {
+        background-image: url(/img/Icon/github.svg);
+        background-repeat: no-repeat;
+        width: 12px;
+        height: 12px;
+        margin-left: 30px;
+        margin-top: 0px;
+        background-size: cover;
+    }
+    
 }
