--- a/Aula 14/css/style.css
+++ b/Aula 14/css/style.css
@@ -153,7 +153,7 @@ footer h3 {
 }
 
 footer a {
-    background-image: url(/img/Icon/github.svg);
+    background-image: url(../img/Icon/github.svg);
     background-repeat: no-repeat;
     width: 30px;
     height: 30px;
@@ -177,7 +177,7 @@ footer a {
         font-size: 2rem;
     }
     footer a {
-        background-image: url(/img/Icon/github.svg);
+        background-image: url(../img/Icon/github.svg);
         background-repeat: no-repeat;
         width: 12px;
         height: 12px;
