--- a/Aula 14/css/style.css
+++ b/Aula 14/css/style.css
@@ -137,20 +137,16 @@ p{
     color: #333;
 }
 footer {
-    
-    
+
     display: flex;
     width: 100%;
     height: 51px;
     align-items: center;
     padding-left: 28px;
     background-color: #00669F;
-    
+    color: #f3f3f3;
 }
 
-footer h3 {
-    color: white;
-}
 
 footer a {
     background-image: url(../img/Icon/github.svg);
@@ -177,13 +173,11 @@ footer a {
         font-size: 2rem;
     }
     footer a {
-        background-image: url(../img/Icon/github.svg);
-        background-repeat: no-repeat;
         width: 12px;
         height: 12px;
         margin-left: 30px;
-        margin-top: 0px;
-        background-size: cover;
+        
+    
     }
     
 }
