--- a/Aula 14/css/style.css
+++ b/Aula 14/css/style.css
@@ -27,9 +27,22 @@ main {
 
 }
 
+button {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    right: 200px;
+    top: 350px;
+    background: #00669F;
+    border-radius: 50%;
+    text-align: center;
+    color: #f3f3f3;
+    font-size: 30px;
+}
+
 h4 {
-   
-    background-color:#D1891C;
+
+    background-color: #D1891C;
     padding-left: 10px;
     width: 100%;
     height: 38px;
@@ -40,11 +53,12 @@ h4 {
     font-family: 'Roboto';
     font-weight: 400;
     padding: 10px;
-    
-    
-    
+
+
+
 }
-h1{
+
+h1 {
     padding: 24px;
     padding-right: 12px;
     font-size: 2.5rem;
@@ -53,6 +67,7 @@ h1{
     color: #f3f3f3;
 }
 
+
 .Ambiente-Card {
     display: flex;
     flex-direction: row;
@@ -60,7 +75,7 @@ h1{
     justify-content: space-between;
     width: 834px;
     height: 100%;
-    
+
 }
 
 .Card {
@@ -70,37 +85,42 @@ h1{
     margin: 12px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.coração{
+
+.coração {
     width: 34px;
     height: 30px;
     position: absolute;
     left: 24px;
     top: 24px;
 }
-.Foto{
+
+.Foto {
     border-radius: 50%;
     width: 135px;
     height: 135px;
     position: absolute;
-    top:143px;
+    top: 143px;
     right: 110px;
-    left:128px;
+    left: 128px;
 
 }
-.Fundo{
+
+.Fundo {
     width: 374px;
     height: 218px;
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
 }
-.text-card{
+
+.text-card {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     font-weight: 400;
 }
-h2{
+
+h2 {
     text-align: center;
     margin: 82px 0px 30px;
     font-size: 1.5rem;
@@ -109,7 +129,7 @@ h2{
     font-weight: 400px;
 }
 
-a{
+a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -123,12 +143,14 @@ a{
     text-decoration: none;
 
 }
-a:active{
+
+a:active {
     transform: scale(0.98);
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
 
 }
-p{
+
+p {
     width: 90%;
     height: 128px;
     font-size: 1rem;
@@ -136,6 +158,7 @@ p{
     text-align: justify;
     color: #333;
 }
+
 footer {
 
     display: flex;
@@ -145,6 +168,7 @@ footer {
     padding-left: 28px;
     background-color: #00669F;
     color: #f3f3f3;
+    font-size: 1rem;
 }
 
 
@@ -158,27 +182,35 @@ footer a {
     background-size: cover;
 }
 
-@media(max-width: 460px){
-    .Ambiente-Card{
+@media(max-width: 460px) {
+    .Ambiente-Card {
         display: flex;
         flex-wrap: nowrap;
         flex-direction: column;
         justify-content: space-between;
-        margin-left:5%;
+        margin-left: 7%;
     }
-    footer h3{
+
+    footer h3 {
         font-size: 0.75rem;
 
     }
-    h1{
+
+    h1 {
         font-size: 2rem;
     }
+
     footer a {
         width: 22px;
         height: 22px;
         margin-left: 30px;
-        
-    
+
     }
-   
+    button{
+        width: 37px;
+        height: 37px;
+        right: 0px;
+        font-size: 25px;
+    }
+
 }
